firebase real-time database integration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-modeldownloader-ktx:24.2.3'
     implementation 'com.google.firebase:firebase-ml-common:22.1.2'
     implementation 'com.google.firebase:firebase-ml-model-interpreter:22.0.4'
+    implementation 'com.google.firebase:firebase-database:20.3.1'
 
     // TensorFlow Lite
     implementation("org.tensorflow:tensorflow-lite:2.9.0")
