--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    implementation 'com.github.AgnaldoNP:AGSkeletonLoading:1.2'
 }
