--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,7 @@ android {
     buildFeatures {
         viewBinding true
         mlModelBinding true
-    }
-
-    dataBinding {
-        enabled = true
+        dataBinding true
     }
 
     buildTypes {
@@ -73,4 +70,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     implementation 'com.github.AgnaldoNP:AGSkeletonLoading:1.2'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.3.0'
+    implementation 'androidx.activity:activity:1.8.0'
 }
